# norquantia-engine-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: invoice_invalid.json  invoice_valid.json
src/norquantia_demo/: analyze.py  cli.py  models.py
tests/: test_analyze.py
tests/fixtures/: invoice_multiple_diagnostics.json
